Fix: Intro image width on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 /* Full-width background for intro section */
 #intro {
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
+    width: 100%;
     box-sizing: border-box;
     min-height: 200px;
     display: flex;
@@ -87,6 +82,13 @@ nav a:hover {
 
 
 @media (max-width: 600px) {
+    #intro {
+        width: 100%;
+        min-height: 300px;
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
     nav ul {
         flex-direction: column;
         gap: 0.5rem;
